Read method in services.

--- a/src/SolutionExample/UI/UIExample/Views/Home/Index.cshtml
+++ b/src/SolutionExample/UI/UIExample/Views/Home/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@model UIExample.Controllers.CardModel
+﻿@using UIExample.ViewModels
+
+@model UIExample.ViewModels.CartViewModel
 
 @{
     ViewData["Title"] = "Home Page";
